# fulcitt-pos

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  USB-PRINTER-SETUP.md  bun.lockb  create-portable-tauri.ps1  eslint.config.js  orders.txt  package.json  vite.config.ts
.gitea/workflows/: build-release.yml  build.yml
locales/it/: app.ftl
src/: App.vue  lib.ts  main.ts  repositories.ts  routes.ts
src-tauri/: .env  .gitignore  Cargo.toml  dummy.db  tauri.conf.json
src-tauri/.sqlx/: query-04f459df0734da99134c9fee876ba7d48fa52614aaa99949aee3480a19bb2eb2.json  query-12c86306a076ea4512712f81d9328a28a15e619a52b7207caefbf9d2ab4327d2.json  query-1b80fe8e0dba163b34d978ad1285cbf8ce5be5d1fc7bc04d5270877a91f1bd23.json  query-2082f22cb2685245184fbe5dd61f7f630b8ec068d38cfecf869314cf399e2701.json  query-48cc51bdfa845d30a9afbd1bba150a76ae8b4616d21b8a45b5819d4085a29604.json  query-7702b67678f6ceaf0ce9c55750375d17088a5a542e93726f0a39af0476a8f725.json  query-8072a0aaed82fb4c1430714872c90d37ec0522031b742c3dc8444e13fc3c2672.json  query-8292566b1017597c1b70292006edabd803bc8924ad55d3534a6254acd2c96ea5.json  query-a162234e064c4af0421659655d89785a1d569d97864e02f6691ac1080ed7c894.json  query-aaf65a4968d1b013cb0992c8b50836dfdd77952a67f67315d5e70be13c2856e3.json  query-aba892d9355700eaeaebc8694b0a1f1aefb5eccae82f30099a7f2d541db69b52.json  query-b103185549abab092ca1bacefc9bdf9a0c651aac474ccbb411b5548ddd764c27.json  query-bd9fbdccff8acf6569875a31ef18564e0455f020d7b0973b81e31d274fc91ee6.json  query-c0c61aa63b1edaa0ea646e2c25db8d90f258d79c3f783f3063b971b787612163.json  query-dd128330598f63f63252287f9dc5b4ed5503730c08c065d17d37f69c8955462d.json  query-e6dd3e0283a647466f70af84dbfaa333681e2a4e8a21f0e1f24446bfaca56b95.json  query-e861ab4ebfa54a7d92b2d36bf6637aacfee0004557c0be1817c667ceb306f2d0.json
src-tauri/migrations/: 20250503124147_create_products_table.sql  20250505210644_create_sales_table.sql  20250505210716_create_sale_items_table.sql  20250512063117_add_is_deleted_to_products.sql  20250617053616_add_timestamps_to_models.sql
src-tauri/src/: errors.rs  exports.rs  intl.rs  lib.rs  main.rs  models.rs  printing.rs
src/components/: MessageDisplay.vue  NavBar.vue  Navbar.vue  PosView.vue  ProductSettingsView.vue  SettingsView.vue
src/components/views/: PosView.vue  ReportView.vue  SettingsView.vue
src/components/views/pos/: CheckoutView.vue  PaymentView.vue
src/components/views/settings/: LayoutView.vue  PrintView.vue  PrinterView.vue  ProductsView.vue
src/locales/: it.ftl  it.json
src/stores/: cart.ts  messagesStore.ts
