[package]
name = "fulcitt-pos"
version = "0.4.0"
description = "Minimal POS used by Gruppo Fulcitt"
authors = ["Mikol Faro <mikol.faro@proton.me>"]
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fulcitt_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio", "tls-native-tls", "chrono"] }
sqlx-cli = "0.8.5"
chrono = { version = "0.4.41", features = ["serde"] }
escpos = { version = "0.15.2", features = ["usb"] }
log = "0.4.27"
dotenvy = "0.15.7"
thiserror = "2.0.12"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
rust_xlsxwriter = { version = "0.87.0", features = ["chrono", "serde"] }
fluent-bundle = "0.16.0"
unic-langid = { version = "0.9.6", features = ["macros"] }
